--- a/viji.html
+++ b/viji.html
@@ -1,3 +1,4 @@
 <center>
   <h1>vijay</h1>
 </center>
+<P>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet dolores ipsum quia reiciendis minus, voluptas harum odit quae animi incidunt!</p>
